on smooth surfaces with unrealistically low specularities (less than 1.8%).
Water has a specular reflectance of 2.1% at room temperture.

Removed NICE macro settings in rpict and rtrace, which was slowing down
the processes under Mac OS X (10.4) by about 60% due to processor napping.

Made xform, replmarks and rad2mgf handle quoted modifiers and names properly.

Fixed problem in genblinds, where it was generating slats that were too
wide with the +/-r option.  (Thanks to Helena Buelow-Huebe for discovering
this bug.)

Fixed bug in ra_ppm for 16-bit/sample i/o, where it was getting the byte
order wrong (apparently).

Added -V option to rtcontrib to report actual contributions, rather than
just ray coefficients.

Fixed bug in ranimate that caused it to fail in continuation of renderings.

Renamed librt.a to librtrad.a, to avoid conflict on Solaris. Almost
everything now gets linked to -lrtrad instead of -lrt.

Fixed problem with large sample sets, so -u+ option now is truly random.
Thanks to Rick Mistrick and Younju Yoon for identifying this problem,
which was related to a poorly designed hash function.

Changed -u+ to be the default setting in rtrace (only).

Fixed binary i/o for rlam and vwrays under Windows.

Added tmCvLums() to tone-mapping routines using a 16-bit lookup table
on IEEE floats, which is also used to improve speed of COLOR conversions,
especially on machines with slow log() calls.  The first call to
tmCvLums(), tmCvGrays(), or tmCvColors() initializes the table.

Created optics2rad.csh script to convert from Optics 5 material output
to something correct for Radiance.  Built on old glazing.cal function,
which is actually incorrect so removed from the distribution.

Fixed nuisance bug in ximage under some SGI machines that caused it to
choose an inappropriate visual and display incorrect colors.  (Thanks
to Oskar Itzinger for debugging the problem.)

Fixed long-standing inaccuracy of pcompos -t and +t thresholding options.